--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-# saurav9680.github.io<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <title>Railway Reservation System</title>
@@ -140,7 +140,7 @@ IRCTC offers Exclusive Rail tour packages with confirmed train tickets, sight-se
     <div class="jumbotron text-center text-white bg-dark" style="margin-bottom:0">
   <p>Copyright © 2020  All Rights Reserved
 
-Designed and Hosted by Shivam Nanda</p>
+Designed and Hosted by Saurav Kumar</p>
 </div>
     <!--Contact Us-->
     <div class="modal fade" id="myModal3">
