--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,7 @@
      <div class="jumbotron text-center text-white bg-dark" style="margin-bottom:0">
   <p>Copyright © 2020  All Rights Reserved
 
-Designed and Hosted by Shivam Nanda</p>
+Designed and Hosted by Saurav Kumar And Group</p>
 </div>
     
     
