--- a/service.html
+++ b/service.html
@@ -92,7 +92,7 @@ After the booking is done, the passenger will get a confirmation message.</p>
     <div class="jumbotron text-center text-white bg-dark" style="margin-bottom:0">
   <p>Copyright © 2020  All Rights Reserved
 
-Designed and Hosted by Shivam Nanda</p>
+Designed and Hosted by Saurav Kumar</p>
 </div>
 <!--Contact Us-->
     <div class="modal fade" id="myModal3">
