--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="Refresh" content="0; url=https://saurav9680.github.io/home.html" />
+<meta http-equiv="Refresh" content="0; url=https://google.com" />
 
