--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Below is the Recent Project File
-<a href="/IRCTC">Online Reservation System </a> INT 219 Project Uploaded on 12 Nov 2021
+Below is the Recent Project File <br/>
+<a href="/IRCTC"><b><font size="8">Online Reservation System </b></font></a> INT 219 Project Uploaded on 12 Nov 2021
