--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>SAURAV KUMAR PROJECT </title>
+  </head>
+  <body>
 Below is the Recent Project File <br/>
-<a href="/IRCTC"><b><font size="8">Online Reservation System </b></font></a> INT 219 Project Uploaded on 12 Nov 2021
+<ol>
+  <li>
+<a href="/IRCTC"><b><font size="4">Online Reservation System </b></font></a> INT 219 Project Uploaded on 12 Nov 2021
+  </li>
+</ol>
+  </body>
+</html>
+
